// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YoutubePlayer Player should render correctly 1`] = `
<DocumentFragment>
  <iframe
    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="https://www.youtube.com/embed/123456?modestbranding=1&rel=0&autoplay=0&controls=0&mute=0&loop=0"
  />
</DocumentFragment>
`;

exports[`YoutubePlayer Player should render correctly with autoplay 1`] = `
<DocumentFragment>
  <iframe
    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="https://www.youtube.com/embed/123456?modestbranding=1&rel=0&autoplay=1&controls=0&mute=0&loop=0"
  />
</DocumentFragment>
`;

exports[`YoutubePlayer Player should render correctly with controls 1`] = `
<DocumentFragment>
  <iframe
    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="https://www.youtube.com/embed/123456?modestbranding=1&rel=0&autoplay=0&controls=1&mute=0&loop=0"
  />
</DocumentFragment>
`;

exports[`YoutubePlayer Player should render correctly with muted 1`] = `
<DocumentFragment>
  <iframe
    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="https://www.youtube.com/embed/123456?modestbranding=1&rel=0&autoplay=0&controls=0&mute=1&loop=0"
  />
</DocumentFragment>
`;

exports[`YoutubePlayer Player should render correctly with title 1`] = `
<DocumentFragment>
  <iframe
    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
    allowfullscreen=""
    class="widget-video-player-iframe"
    frameborder="0"
    src="https://www.youtube.com/embed/123456?modestbranding=1&rel=0&autoplay=0&controls=0&mute=0&loop=0"
    title="Sample Video Title"
  />
</DocumentFragment>
`;
